<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.UserDetail">

    <ImageView
        android:id="@+id/card_image"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alas"
        tools:ignore="ContentDescription" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/card_image"
        app:layout_constraintStart_toStartOf="@+id/card_image"
        app:layout_constraintTop_toTopOf="@+id/card_image"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/namaLengkap"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/detail_avatar"
        app:layout_constraintTop_toTopOf="@+id/detail_avatar" />

    <TextView
        android:id="@+id/detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/user_username"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/detail_name"
        app:layout_constraintTop_toBottomOf="@+id/detail_name"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/detail_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_location"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/img_location"
        app:layout_constraintTop_toBottomOf="@+id/detail_username"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/img_location"
        android:layout_width="19dp"
        android:layout_height="19dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@+id/detail_username"
        app:layout_constraintTop_toBottomOf="@+id/detail_username"
        app:srcCompat="@drawable/ic_baseline_location_on_24"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/detail_company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_company"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/detail_avatar"
        app:layout_constraintStart_toStartOf="@+id/img_location"
        app:layout_constraintTop_toBottomOf="@+id/img_location"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/title_following"
        android:textColor="@color/blueRetro"
        app:layout_constraintBottom_toBottomOf="@+id/followers"
        app:layout_constraintEnd_toStartOf="@+id/followers"
        app:layout_constraintTop_toTopOf="@+id/followers" />

    <ImageView
        android:layout_width="12sp"
        android:layout_height="14sp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/heart"
        app:layout_constraintBottom_toBottomOf="@+id/detail_following"
        app:layout_constraintEnd_toStartOf="@+id/detail_following"
        app:layout_constraintTop_toTopOf="@+id/detail_following"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/detail_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_following"
        android:textColor="@color/blueRetro"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/detail_followers"
        app:layout_constraintEnd_toEndOf="@+id/following"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="@+id/following"
        app:layout_constraintTop_toBottomOf="@+id/following" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/title_following"
        android:textColor="@color/blueRetro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_image"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="12sp"
        android:layout_height="14sp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/ic_people_blue24"
        app:layout_constraintBottom_toBottomOf="@+id/detail_followers"
        app:layout_constraintEnd_toStartOf="@+id/detail_followers"
        app:layout_constraintTop_toTopOf="@+id/detail_followers"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/detail_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/user_followers"
        android:textColor="@color/blueRetro"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@+id/followers"
        app:layout_constraintHorizontal_bias="0.794"
        app:layout_constraintStart_toStartOf="@+id/followers"
        app:layout_constraintTop_toBottomOf="@+id/followers"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/Repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/title_repository"
        android:textColor="@color/blueRetro"
        app:layout_constraintBottom_toBottomOf="@+id/followers"
        app:layout_constraintStart_toEndOf="@+id/followers"
        app:layout_constraintTop_toTopOf="@+id/followers"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:layout_width="12sp"
        android:layout_height="14sp"
        android:layout_marginEnd="5dp"
        android:src="@drawable/logo_github_"
        app:layout_constraintBottom_toBottomOf="@+id/detail_repository"
        app:layout_constraintEnd_toStartOf="@+id/detail_repository"
        app:layout_constraintTop_toTopOf="@+id/detail_repository" />

    <TextView
        android:id="@+id/detail_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_repository"
        android:textColor="@color/blueRetro"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/detail_followers"
        app:layout_constraintEnd_toEndOf="@+id/Repository"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/Repository"
        app:layout_constraintTop_toBottomOf="@+id/Repository"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/blueRetro"
        app:tabSelectedTextColor="@color/white"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1"
        tools:ignore="MissingConstraints" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        tools:ignore="MissingConstraints" >

    </androidx.viewpager.widget.ViewPager>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="294dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/favorite_toggle"
        android:tint="@color/white"
        android:background="@drawable/favorite_toggle"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>